--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
     </div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script type="module" src="/src/main.js"></script>
+
 </body>
 
 </html>
