--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
   <div class="risultato" id="risultati">
 
   </div>
+
+  <!-- Aggiunto pulsante per caricare più risultati -->
+  <div id="load-more-container" style="text-align: center; margin: 20px 0; display: none;">
+    <button type="button" class="btn btn-primary" id="btn-load-more">Carica più risultati</button>
+  </div>
+
   <div class="modal fade" id="desc-modal" tabindex="-1" aria-labelledby="desc-modalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -52,9 +58,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js"></script>
-
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
   <script type="module" src="/src/main.js"></script>
 </body>
 
